[gd_scene load_steps=8 format=2]

[ext_resource path="res://libs/stigmark.gdns" type="Script" id=1]
[ext_resource path="res://scenes/Strand/StrandManager.gd" type="Script" id=2]
[ext_resource path="res://theme/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://scenes/Strand/StrandGeneration.gd" type="Script" id=4]
[ext_resource path="res://scenes/Browser/BrowserScene.tscn" type="PackedScene" id=5]

[sub_resource type="Shader" id=7]
code = "shader_type spatial;
render_mode blend_mix,depth_draw_opaque,cull_back,diffuse_burley,specular_schlick_ggx;
uniform vec4 albedo : hint_color;
uniform sampler2D texture_albedo : hint_albedo;
uniform float specular;
uniform float metallic;
uniform float roughness : hint_range(0,1);
uniform float point_size : hint_range(0,128);
uniform vec3 uv1_scale;
uniform vec3 uv1_offset;
uniform vec3 uv2_scale;
uniform vec3 uv2_offset;

uniform vec3 grass_color = vec3(0.0, 0.2, 0.0);
uniform vec3 water_color = vec3(0.0, 0.1, 0.8);

varying flat vec3 out_color;

void vertex() {
	UV=UV*uv1_scale.xy+uv1_offset.xy;
	out_color=VERTEX.z >= -5.0 && VERTEX.z <= 4.5 ? water_color : grass_color;
}

void fragment() {
	vec2 base_uv = UV;
	vec4 albedo_tex = texture(texture_albedo,base_uv);
	ALBEDO = out_color * albedo_tex.rgb;
	METALLIC = metallic;
	ROUGHNESS = roughness;
	SPECULAR = specular;
}
"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/albedo = Color( 0.101961, 0.54902, 0.109804, 1 )
shader_param/specular = 0.5
shader_param/metallic = 0.0
shader_param/roughness = 1.0
shader_param/point_size = 1.0
shader_param/uv1_scale = Vector3( 1, 1, 1 )
shader_param/uv1_offset = Vector3( 0, 0, 0 )
shader_param/uv2_scale = Vector3( 1, 1, 1 )
shader_param/uv2_offset = Vector3( 0, 0, 0 )
shader_param/grass_color = Vector3( 0, 0.2, 0 )
shader_param/water_color = Vector3( 0, 0.1, 0.8 )

[node name="Strand" type="Spatial"]
script = ExtResource( 2 )

[node name="Generator" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="GeneratedStrands" type="MeshInstance" parent="Generator"]
material_override = SubResource( 8 )
skeleton = NodePath("../..")

[node name="Stigmark" type="Spatial" parent="."]
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="Stigmark"]

[node name="Menu" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -136.0
margin_top = -104.0
margin_right = 136.0

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -240.5
margin_right = 240.5
margin_bottom = 40.0

[node name="OpenBrowser" type="Button" parent="Menu/HBoxContainer"]
margin_right = 130.0
margin_bottom = 40.0
focus_mode = 0
theme = ExtResource( 3 )
enabled_focus_mode = 0
text = "Web Browser"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="Menu/HBoxContainer"]
margin_left = 134.0
margin_right = 144.0
margin_bottom = 40.0
rect_min_size = Vector2( 10, 0 )

[node name="StigmarkButton" type="Button" parent="Menu/HBoxContainer"]
margin_left = 148.0
margin_right = 481.0
margin_bottom = 40.0
focus_mode = 0
theme = ExtResource( 3 )
enabled_focus_mode = 0
text = "Add URLs from Stigmark collections"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hint" type="Control" parent="."]
anchor_right = 1.0
margin_bottom = 162.0

[node name="HintAddResource" type="CenterContainer" parent="Hint"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="Hint/HintAddResource"]
margin_left = 760.0
margin_top = 51.0
margin_right = 1160.0
margin_bottom = 111.0
rect_min_size = Vector2( 400, 60 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 3 )
text = "  Click on a + sign to place your Resource.
Click on an existing Resource to replace it."

[node name="AutofillLinkPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -290.0
margin_top = -60.5
margin_right = 290.0
margin_bottom = 60.5

[node name="VBoxContainer" type="VBoxContainer" parent="AutofillLinkPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -257.0
margin_top = -32.0
margin_right = 257.0
margin_bottom = 32.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="AutofillLinkPanel/VBoxContainer"]
margin_right = 514.0
margin_bottom = 30.0

[node name="RichTextLabel" type="RichTextLabel" parent="AutofillLinkPanel/VBoxContainer/HBoxContainer"]
margin_right = 280.0
margin_bottom = 30.0
rect_min_size = Vector2( 280, 30 )
theme = ExtResource( 3 )
text = "Keyword (bitcoin, mysql, ...)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keyword" type="TextEdit" parent="AutofillLinkPanel/VBoxContainer/HBoxContainer"]
margin_left = 284.0
margin_right = 504.0
margin_bottom = 30.0
rect_min_size = Vector2( 220, 30 )

[node name="CenterContainer" type="CenterContainer" parent="AutofillLinkPanel/VBoxContainer"]
margin_top = 34.0
margin_right = 514.0
margin_bottom = 74.0

[node name="StigmarkSearch" type="Button" parent="AutofillLinkPanel/VBoxContainer/CenterContainer"]
margin_left = 29.0
margin_right = 485.0
margin_bottom = 40.0
rect_min_size = Vector2( 70, 40 )
theme = ExtResource( 3 )
text = "Fill strand with URLs associated with this keyword"

[node name="BrowserGUI" parent="." instance=ExtResource( 5 )]

[connection signal="on_search" from="Stigmark" to="." method="_on_Stigmark_on_search"]
[connection signal="pressed" from="Menu/HBoxContainer/OpenBrowser" to="." method="_on_OpenBrowser_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/StigmarkButton" to="." method="_on_StigmarkButton_pressed"]
[connection signal="pressed" from="AutofillLinkPanel/VBoxContainer/CenterContainer/StigmarkSearch" to="." method="_on_StigmarkSearch_pressed"]
